--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 .bg-color {
-    background-color: #7F0BC8;
+    background-color: #ff5656;
 }
 
 .corpo{
@@ -9,6 +9,6 @@
 
 .btn-color {
     color: #FFFFFF;
-    background-color:#7F0BC8;
+    background-color: #ff5656;
     border-color: #000;
 }
